fix content shifting when page loads

--- a/recipes/food.css
+++ b/recipes/food.css
@@ -21,6 +21,7 @@ h1 {
 img {
    width: 100%;
    height: auto;
+   aspect-ratio: 16/12;
 }
 
 * {
